--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,11 +40,18 @@
 :root {
   --orange_text: #ff8c00;
   --navbar_bkgrnd: #191970;
+  /* --navbar_bkgrnd: #2574A9; */
+  --left_sidebar_header: #2574A9;
+  --left_sidebar_bkgrnd: rgb(40,40,40);
+  --main_color: rgb(31,31,31);
+  --highlight_color: #61dafb;
+
 }
 
 .logout-btn {
   position: relative;
 }
+
 
 .navbar-container-start {
   display: flex;
@@ -53,16 +60,10 @@
   justify-content: flex-start;
   align-items: center;
   background-color: var(--navbar_bkgrnd);
+  box-shadow: 0px 0.5px 0.5px rgba(0,0,0,0.5);
+  z-index: 3;
 }
-.navbar-container-end {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  flex-basis: 50%;
-  position: relative;
-  justify-content: flex-end;
-  align-items: center;
-}
+
 .navbar-page {
   position: relative;
   padding: 3px 10px;
@@ -80,7 +81,8 @@
   display: flex;
   position: relative;
   font-size: 8px;
-  padding: 0px 0px 0px 10px;
+  padding: 0px 0px 0px 6px;
+  color: white;
 }
 
 .navbar-page:hover {
@@ -103,15 +105,18 @@
 
 .left-sidebar {
   position: fixed;
-  width: 100px;
+  width: 15%;
   height: 100vh;
   left: 0px;
-  background-color: black;
+  background-color: var(--left_sidebar_bkgrnd);
+  float: left;
+  box-shadow: 0.5px 0px 1px rgba(0,0,0,0.2);
+  z-index: 2;
 }
 .left-sb-logo {
   font-size: 10px;
   padding: 5px 10px 5px 5px;
-  background-color: #2574A9;
+  background-color: var(--left_sidebar_header);
   color: white;
 }
 .left-sb-navigation {
@@ -130,4 +135,29 @@
   margin: 0px;
   color: white;
   padding: 0px 0px 5px 10px
+}
+
+/* Main Styling */
+
+.main {
+  background-color: var(--main_color);
+  float: right;
+  height: 100vh;
+  width: 85%;
+}
+
+.add-task {
+  position: relative;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 6px;
+}
+
+.add-task:hover {
+  color: var(--highlight_color);
+}
+
+.invisible {
+  display: none;
 }
