Minor changes to the code.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -48,11 +48,15 @@
 
 }
 
+.invisible {
+  display: none;
+}
+
 .logout-btn {
   position: relative;
 }
 
-
+/* NavBar styling */
 .navbar-container-start {
   display: flex;
   flex-direction: row;
@@ -146,18 +150,40 @@
   width: 85%;
 }
 
-.add-task {
+.add-task-container {
   position: relative;
   background-color: transparent;
   border: none;
   color: white;
   font-size: 6px;
+  border: 1px white dotted;
+  width: 70px;
+  height: 20px;
 }
 
-.add-task:hover {
+.add-task-btn {
+  position: relative;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 6px;
+  padding: 10px 2px 10px 2px;
+}
+
+.add-task-angle {
+  /* padding: 10px 2px 10px 2px; */
+  transform: translateY(0.5px);
+  color: white;
+  font-size: 6px;
+}
+.add-task-angle:hover {
   color: var(--highlight_color);
 }
 
-.invisible {
-  display: none;
+.add-task-btn:hover {
+  color: var(--highlight_color);
+}
+
+.add-task-container:hover {
+  color: var(--highlight_color);
 }
