--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -342,6 +342,12 @@ font-size: 16px;
   
 
   /* Task Styling */
+  .fade-out{
+    width: 5px;
+    opacity: 0.3;
+    background: rgba(31,31,31, 0.3);
+  }
+  /* Figure out how to make the overflow fadeout cleanly */
 
   .task-edit {
     color: white;
@@ -350,13 +356,51 @@ font-size: 16px;
     color: var(--accent1);
   }
 
-  .task {
+  .task-item {
     display: flex;
     flex-direction: column;
     margin: 25px;
+    padding: 5px;
     border: solid 0.5px var(--top-gray);
     color: white;
   }
+  .task-element {
+    margin: 0px 0px 0px 10px;
+    align-self: flex-start;
+    text-align: left;
+  }
+
+  .task-header{
+    display: flex;
+    flex-direction: row;
+  }
+  .task-title{
+    margin-right: auto;
+    overflow-x: hidden;
+  }
+  .task-body {
+    display: flex;
+    flex-direction: column;
+  }
+  .task-icons {
+    display: flex;
+    white-space: nowrap;
+    margin-top: 4px;
+  }
+  .task-icon {
+    margin-left: 4px;
+    margin-right:  4px;
+  }
+  .task-bucket {
+    margin: 10px 10px 10px 10px;
+    padding: 3px 5px 3px 5px;
+    border: solid 1px var(--top-gray);
+    border-radius: 5px;
+  }
+.task-bucket:hover {
+  border: solid 1px var(--mid-gray);
+  background-color: var(--top-gray);
+}
   .task-delete {
     color: white;
   }
