--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -139,6 +139,30 @@
   color: var(--accent1);
 }
 
+/* Popup Styling */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,0.2);
+}
+.popup-inner  {
+  position: relative;
+  padding: 20px;
+  width: 100%;
+  max-width: 360px;
+  height: 420px;
+  background-color: var(--mid-gray);
+  color: white;
+
+}
+
 /* Side Bar styling */
 
 .left-sidebar {
