--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -222,7 +222,8 @@ border-radius: 15px;
 .left-sidebar {
   position: relative;
   width: 15%;
-  min-height: 100vh; 
+  min-height: 100vh;
+  min-width: 165px; 
   left: 0px;
   background-color: var(--mid-gray);
   float: left;
@@ -286,6 +287,7 @@ border-radius: 15px;
 .bucket-list {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 .buckets {
 position: relative;
@@ -362,6 +364,7 @@ background-color: var(--accent1);
 .bucket-item {
   color: white;
   cursor: pointer;
+  white-space: nowrap;
 }
 .bucket-item:hover {
   color: var(--accent1);
@@ -426,6 +429,7 @@ background-color: var(--accent1);
   background-color: var(--mid-gray);
   color: white;
   width: 800px;
+  height: 150px;
   margin: auto;
 }
 .textarea-container-submit {
@@ -444,15 +448,28 @@ background-color: var(--accent1);
   font-size: 16px;
   }
   .task-area2 {
+    height: 100px;
+    padding: 2px;
+    margin: 2px 12px 2px 16px;
+    overflow: auto;
+    resize: both;
+    -moz-appearance: textfield-multiline;
+    -webkit-appearance: textarea;
     background: transparent;
     outline: none;
     resize: none;
     color: white;
-    margin-bottom: 3px;
     border: none;
     font-size: 16px;
+    cursor: text;
+    font-family: monospace;
+    text-align: left;
     }
 
+  .task-area2:empty::before {
+    color: rgb(117,117,117);
+    content: 'Task Details...';
+  }
 
   .hover {
     color: var(--highlight_color);
@@ -500,6 +517,9 @@ background-color: var(--accent1);
 .task-body {
   display: flex;
   flex-direction: column;
+}
+.task-details {
+  white-space: pre-wrap;
 }
 
 .task-icons {
