--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -197,7 +197,6 @@ border-radius: 15px;
   left: 0;
   width: 100%;
   height: 100vh;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -205,9 +204,9 @@ border-radius: 15px;
 }
 .popup-inner  {
   position: relative;
-  padding: 20px;
+  padding: 20px 10px 20px 20px;
   width: 100%;
-  max-width: 360px;
+  max-width: 370px;
   height: 420px;
   background-color: var(--mid-gray);
   color: white;
@@ -223,7 +222,7 @@ border-radius: 15px;
   position: relative;
   width: 15%;
   min-height: 100vh;
-  min-width: 165px; 
+  min-width: 210px; 
   left: 0px;
   background-color: var(--mid-gray);
   float: left;
@@ -324,11 +323,16 @@ background-color: var(--accent1);
   width: 500px;
   height: 500px;
 }
-
+.bucket-list-sizing{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 325px ;
+}
 .bucket-list-pop {
  display: flex;
  flex-direction: column;
  padding: 0;
+ margin-right: 3px;
 }
 .bucket-elements-pop {
   display: flex;
@@ -337,7 +341,7 @@ background-color: var(--accent1);
 .bucket-element-pop {
   display: flex;
   flex-direction: row;
-  margin: 10px 0px 10px 0px;
+  margin: 11px 0px 11px 0px;
   min-height: 22px;
 }
 .bucket-item-pop {
@@ -350,6 +354,7 @@ background-color: var(--accent1);
   display: flex;
   flex-grow: 4;
   justify-content: flex-end;
+  align-items: center;
 }
 .bucket-item-edit {
   display: flex;
