--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -646,7 +646,6 @@ cursor: pointer;
   opacity: 0.3;
   background: rgba(31,31,31, 0.3);
 }
-/* Figure out how to make the overflow fadeout cleanly */
 
 .task-edit {
   color: white;
@@ -757,7 +756,9 @@ flex-direction: row;
   .task-delete:hover {
     color: var(--accent1);
   }
-
+  .task-complete:hover {
+    background-color: rgba(255,255,255, 0.6)
+  }
 
   /* Dropdown Styling */
 
