--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -668,7 +668,7 @@ cursor: pointer;
   margin-bottom: 25px;
   margin-left: auto;
   margin-right: auto;
-  padding: 5px;
+  padding: 6px;
   border: solid 0.5px var(--top-gray);
   color: white;
   min-height: 50px;
@@ -697,6 +697,7 @@ cursor: pointer;
 }
 .task-details {
   white-space: pre-wrap;
+  padding:4px 0px 4px 16px;
 }
 
 .task-icons {
@@ -737,7 +738,7 @@ flex-direction: row;
 }
 
 .task-bucket {
-  margin: 10px 10px 10px 10px;
+  margin: 5px 10px 5px 10px;
   padding: 3px 5px 3px 5px;
   border: solid 1px var(--top-gray);
   border-radius: 5px;
@@ -757,7 +758,8 @@ flex-direction: row;
     color: var(--accent1);
   }
   .task-complete:hover {
-    background-color: rgba(255,255,255, 0.6)
+    cursor: pointer;
+    user-select: none;
   }
 
   /* Dropdown Styling */
