Made our modular time table.
Co-authored-by: Dylan Anderson <dylrob34@users.noreply.github.com>

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -814,3 +814,8 @@ flex-direction: row;
     width: 150px;
     border: 1px solid gray;
 }
+
+.table-fill {
+  color: white;
+  user-select: none;
+}
