--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -697,6 +697,7 @@ cursor: pointer;
 .task-header{
   display: flex;
   flex-direction: row;
+  align-items: center;
 
 }
 .task-title{
@@ -753,16 +754,16 @@ flex-direction: row;
 .task-bucket {
   margin: 5px 10px 5px 10px;
   padding: 3px 5px 3px 5px;
-  border: solid 1px var(--top-gray);
+  border: solid 1px var(--top-gray2);
+  background-color: var(--top-gray);
   border-radius: 5px;
   cursor: pointer;
-  color: var(--font-gray);
-  opacity: 0.8;
+  color:rgb(255, 255, 255, 0.5);
 }
 .task-bucket:hover {
   border: solid 1px var(--mid-gray);
-  background-color: var(--top-gray);
-  color: white;
+  background-color: var(--top-gray2);
+  color: rgb(255, 255, 255, 0.8);
 }
   .task-delete {
     color: white;
@@ -796,6 +797,7 @@ flex-direction: row;
     cursor: pointer;
   }
 
+/* TimeBlock section  */
   .table{
     display: table;
     width: auto;
@@ -819,4 +821,20 @@ flex-direction: row;
 .table-fill {
   color: white;
   user-select: none;
+}
+
+.cell {
+
+}
+.blank-cell {
+
+}
+.readonly-cell {
+width: 150px;
+height: 22px;
+}
+
+.editable-cell {
+width: 100%;
+height: 100%;
 }
