--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -63,6 +63,9 @@
   --top-gray: rgb(54,54,54) ;
   --top-gray2: #3b3b3b; /*(59,59,59)*/
 
+  /* General Properties */
+  --timeblock-pop-h: 96px;
+
 }
 
 .invisible {
@@ -340,6 +343,16 @@ border-radius: 15px;
 }
 .popup-close {
   margin-top: 10px;
+}
+
+.popup-timeblock {
+  position: absolute;
+  top: calc(var(--timeblock-pop-h) / 2 * -1 + 12);
+  left: 138px;
+  width: 76px;
+  height: var(--timeblock-pop-h);
+  background-color: var(--mid-gray2);
+  z-index: 100;
 }
 
 /* Side Bar styling */
@@ -831,23 +844,27 @@ flex-direction: row;
   }
 
 /* TimeBlock section  */
-  .table{
-    display: table;
-    width: auto;
-    border: 1px solid black;
+.table {
+    /* border: 1px solid black; */
+    display: flex;
+    z-index: 0;
+    width: 75%;
+    height: 75%;
 }
-
-.table-row {
-    display: table-row;
-    width: auto;
-    clear: both;
+.table-blank {
 }
-
 .table-col {
-    float: left;
-    display: table-column;
-    width: 150px;
-    height: 22px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
+  clear: both;
+  /* border: solid 1px black; */
+}
+.table-row {
+    display: flex;
+    width: 100%;
     border: 1px solid gray;
 }
 
@@ -857,17 +874,27 @@ flex-direction: row;
 }
 
 .cell {
-
+    border: 1px solid gray;
 }
 .blank-cell {
 
 }
 .readonly-cell {
-width: 150px;
-height: 22px;
+  text-align: left;
+  height: 100%;
+  width: 100%;
+  line-height: normal;
+  vertical-align: middle;
 }
 
 .editable-cell {
-width: 100%;
-height: 100%;
+  all: unset;
+  text-align: left;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+  line-height: normal;
 }
