Filled in popup to allow for adding data to the table

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -352,6 +352,7 @@ border-radius: 15px;
   width: 76px;
   height: var(--timeblock-pop-h);
   background-color: var(--mid-gray2);
+  border: 2px;
   z-index: 100;
 }
 
