--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -534,7 +534,7 @@ display: flex;
   width: 85%;
 }
 
-.menu-container {
+.toolbar-container {
 display: flex;
 flex-direction: row;
 background-color: var(--mid-gray);
@@ -543,25 +543,25 @@ padding: 5px;
 align-items: center;
 }
 
-.menu-element {
+.toolbar-element {
 display: flex;
 flex-direction: row;
 align-items: center;
 color: white;
 padding: 5px 10px 5px 10px;
 }
-.menu-element:hover {
+.toolbar-element:hover {
   background-color: var(--base-gray);
   border-radius: 8px;
   color: var(--button);
   cursor: pointer;
   user-select: none;
 }
-.menu-item {
+.toolbar-item {
 padding: 0px 3px 0px 3px;
 }
 
-.menu-sort {
+.toolbar-sort {
 display: flex;
 margin-right: 1%;
 }
