--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -64,7 +64,8 @@
   --top-gray2: #3b3b3b; /*(59,59,59)*/
 
   /* General Properties */
-  --timeblock-pop-h: 96px;
+  --timeblock-pop-h: 175px;
+  --timeblock-pop-w: 150px;
 
 }
 
@@ -345,16 +346,6 @@ border-radius: 15px;
   margin-top: 10px;
 }
 
-.popup-timeblock {
-  position: absolute;
-  top: calc(var(--timeblock-pop-h) / 2 * -1 + 12);
-  left: 138px;
-  width: 76px;
-  height: var(--timeblock-pop-h);
-  background-color: var(--mid-gray2);
-  border: 2px;
-  z-index: 100;
-}
 
 /* Side Bar styling */
 
@@ -875,15 +866,18 @@ flex-direction: row;
 }
 
 .cell {
-    border: 1px solid gray;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
-.blank-cell {
 
-}
 .readonly-cell {
+  position: relative;
   text-align: left;
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 1px;
   line-height: normal;
   vertical-align: middle;
   font-size: 0.9rem;
@@ -891,13 +885,38 @@ flex-direction: row;
 
 .editable-cell {
   all: unset;
-  text-align: left;
+  position: relative;
   width: 100%;
   height: 100%;
   outline: none;
   margin: 0;
-  padding: 0;
+  padding: 1px;
   vertical-align: middle;
   line-height: normal;
   font-size: 0.9rem;
+  text-align: left;
+  cursor: pointer;
 }
+
+.popup-timeblock {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: calc(var(--timeblock-pop-h) / 2 * -1 + 12);
+  left: 138px;
+  width: var(--timeblock-pop-w);
+  height: var(--timeblock-pop-h);
+  background-color: var(--mid-gray2);
+  border: 2px;
+  border-radius: 8px;
+  z-index: 100;
+  justify-content: center;
+  align-items: center;
+}
+.popup-timeblock-text {
+width: 125px;
+margin: 2px 0px 2px 0px;
+border-radius: 6px;
+outline: var(--primary-green);
+}
+
