--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -920,3 +920,18 @@ border-radius: 6px;
 outline: var(--primary-green);
 }
 
+.categories-container {
+display: flex;
+flex-direction: column;
+}
+.categories-element {
+display: flex;
+flex-direction: row;
+align-items: center;
+}
+.categories-item {
+justify-content: flex-start;
+}
+.categories-item:hover {
+  color: var(--accent-green);
+}
