--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -165,6 +165,12 @@ font-size: 14px;
   font-weight: 200;
 }
 
+.draggable {
+  cursor: move;
+  z-index: 101;
+}
+
+
 /* Login Styling */
 .main-login {
   height: 100vh;
@@ -678,19 +684,19 @@ cursor: pointer;
 }
 
 .task-shell {
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-left: auto;
-  margin-right: auto;
-  /* To fix the problem of grip disappearing see task in Blockz.*/
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.task-container {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  position: relative;
+}
 .task-item {
   display: flex;
   flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
   padding: 6px;
   border: solid 0.5px var(--mid-gray);
   border-radius: 6px;
